--- a/learn/logstash/shipper.conf
+++ b/learn/logstash/shipper.conf
@@ -1,25 +1,53 @@
+#--------------------
+# Input Samples
+#--------------------
 input {
   file {
     type => "bb-services"
     path => "/usr/local/blackboard/logs/bb-services-log.txt"
+    sincedb_path => "/usr/local/logstash/.sincedb-bb-services"
   }
 
   file {
     type => "apache-access"
     path => "/usr/local/blackboard/logs/tomcat/bb-access-log*"
+    sincedb_path => "/usr/local/logstash/.sincedb-apache-access"
   }
 
   file {
     type => "tomcat-std"
     path => "/usr/local/blackboard/logs/tomcat/stdout-stderr*"
+    sincedb_path => "/usr/local/logstash/.sincedb-tomcat-std"
   }
 
   file {
     type => "catalina"
     path => "/usr/local/blackboard/logs/tomcat/catalina-log.txt"
+    sincedb_path => "/usr/local/logstash/.sincedb-catalina"
+  }
+
+  file {
+    type => "security-central"
+    path => "/usr/local/blackboard/logs/bb-security-log.txt"
+    sincedb_path => "/usr/local/logstash/.sincedb-security-central"
+  }
+
+  file {
+    type => "security-validation"
+    path => "/usr/local/blackboard/logs/bb-input-validation-filter-log.txt"
+    sincedb_path => "/usr/local/logstash/.sincedb-security-validation"
+  }
+
+  file {
+    type => "security-authentication"
+    path => "/usr/local/blackboard/logs/bb-authentication-log.txt"
+    sincedb_path => "/usr/local/logstash/.sincedb-security-authentication"
   }
 }
 
+#--------------------
+# Output Samples
+#--------------------
 output {
   stdout { debug => true debug_format => "json"}
 
