Templating with Ansible syntax

--- a/learn/indexer.conf
+++ b/learn/indexer.conf
@@ -77,29 +77,26 @@ filter {
   }
 }
 
-#--------------------
-# Input Sample
-#--------------------
 input {
   redis {
-    host => "kibana.pd.local"
+    host => "{{logstash__redis_input_host}}"
     type => "redis-input"
     data_type => "list"
     key => "logstash"
-    format => "json_event"
+    threads => {{logstash__redis_input_threads}}
   }
 }
 
-#--------------------
-# Output Sample
-#--------------------
 output {
-  stdout { debug => true debug_format => "json"}
-
   elasticsearch {
-    host => "kibana.pd.local"
-    port => "9300"
-    cluster => "elasticsearch-kibana"
-  } 
+    host => "{{elasticsearch__host}}"
+    port => "{{elasticsearch__port}}"
+    protocol => http
+    manage_template => true
+    template_name => "bblearn"
+    template => "/usr/local/logstash/elasticsearch_template_bblearn.json"
+    template_overwrite => true
+    workers => {{logstash__elasticsearch_output_threads}}
+  }
 }
 
