--- a/learn/shipper.conf
+++ b/learn/shipper.conf
@@ -49,11 +49,10 @@ input {
 # Output Samples
 #--------------------
 output {
-  stdout { debug => true debug_format => "json"}
-
   redis {
-    host => "kibana.pd.local"
+    host => "{{logstash__redis_output_host}}"
     data_type => "list"
     key => "logstash"
   }
 }
+
